Verlinkung "Einschränkung der Verarbeitung"

--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -51,7 +51,7 @@
     \label{itm:13-2a}
 
     \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
-     Daten sowie auf Berichtigung oder Löschung oder auf Einschränkung der Verarbeitung oder eines Widerspruchsrechts
+     Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} oder eines Widerspruchsrechts
      gegen die Verarbeitung sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:13-2b}
 
