--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -54,7 +54,7 @@
     \label{itm:14-2b}
 
     \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
-     Daten sowie auf Berichtigung oder Löschung oder auf Einschränkung der Verarbeitung und eines Widerspruchsrechts
+     Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} und eines Widerspruchsrechts
      gegen die Verarbeitung sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:14-2c}
 
