--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -29,7 +29,7 @@
     \label{itm:15-1d}
 
     \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} oder auf
-     Einschränkung der Verarbeitung durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese Verarbeitung;
+     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese Verarbeitung;
     \label{itm:15-1e}
 
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
