--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen die Einschränkung der Verarbeitung zu verlangen,
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} zu verlangen,
    wenn eine der folgenden Voraussetzungen gegeben ist:
   \label{itm:18-1}
 
@@ -38,7 +38,7 @@
    werden.
   \label{itm:18-2}
 
-  \item Eine \hyperref[itm:04-1]{betroffene Person}, die eine Einschränkung der Verarbeitung gemäß \hyperref[itm:18-1]{Absatz 1} erwirkt hat,
+  \item Eine \hyperref[itm:04-1]{betroffene Person}, die eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} erwirkt hat,
    wird von dem Verantwortlichen unterrichtet, bevor die Einschränkung aufgehoben wird.
   \label{itm:18-3}
 
