--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -47,7 +47,7 @@
 
   \end{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine internationale Organisation übermittelt, so hat die
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} übermittelt, so hat die
    \hyperref[itm:04-1]{betroffene Person} das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im Zusammenhang mit der
    Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
