--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -30,7 +30,7 @@
   \begin{enumerate}
   
     \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des Verantwortlichen -- auch in Bezug auf die
-     Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine internationale Organisation -- verarbeitet, sofern
+     Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} -- verarbeitet, sofern
      er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der Auftragsverarbeiter unterliegt, hierzu
      verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem Verantwortlichen diese rechtlichen
      Anforderungen vor der Verarbeitung mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
