--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -26,8 +26,8 @@
      offengelegt werden, einschließlich Empfänger in Drittländern oder internationalen Organisationen;
     \label{itm:30-1d}
 
-    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine internationale
-     Organisation, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
+     Organisation}, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
      Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
      Datenübermittlungen die Dokumentierung geeigneter Garantien;
     \label{itm:30-1e}
@@ -55,8 +55,8 @@
     \item die Kategorien von Verarbeitungen, die im Auftrag jedes Verantwortlichen durchgeführt werden;
     \label{itm:30-2b}
 
-    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine internationale
-     Organisation, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
+     Organisation}, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
      Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
      Datenübermittlungen die Dokumentierung geeigneter Garantien;
     \label{itm:30-2c}
