--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -49,7 +49,7 @@
      Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2i}
 
-    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an internationale Organisationen oder
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-29]{internationale Organisationen} oder
     \label{itm:40-2j}
 
     \item außergerichtliche Verfahren und sonstige Streitbeilegungsverfahren zur Beilegung von Streitigkeiten zwischen
@@ -64,7 +64,7 @@
    gemäß \hyperref[itm:40-9]{Absatz 9 des vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
    Verantwortlichen oder Auftragsverarbeitern, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
    fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer
-   oder internationale Organisationen nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
+   oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
    bieten. Diese Verantwortlichen oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich
    bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden,
    auch im Hinblick auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
