--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Eine Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine internationale Organisation darf
+  \item Eine Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} darf
    vorgenommen werden, wenn die Kommission beschlossen hat, dass das betreffende Drittland, ein Gebiet oder ein oder
-   mehrere spezifische Sektoren in diesem Drittland oder die betreffende internationale Organisation ein angemessenes
+   mehrere spezifische Sektoren in diesem Drittland oder die betreffende \hyperref[itm:04-29]{internationale Organisation} ein angemessenes
    Schutzniveau bietet. Eine solche Datenübermittlung bedarf keiner besonderen Genehmigung.
   \label{itm:45-1}
 
@@ -23,14 +23,14 @@
      als auch sektoraler Art -- auch in Bezug auf öffentliche Sicherheit, Verteidigung, nationale Sicherheit und
      Strafrecht sowie Zugang der Behörden zu \hyperref[itm:04-1]{personenbezogenen Daten} -- sowie die Anwendung dieser Rechtsvorschriften,
      Datenschutzvorschriften, Berufsregeln und Sicherheitsvorschriften einschließlich der Vorschriften für die
-     Weiterübermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein anderes Drittland bzw. eine andere internationale Organisation,
+     Weiterübermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein anderes Drittland bzw. eine andere \hyperref[itm:04-29]{internationale Organisation},
      die Rechtsprechung sowie wirksame und durchsetzbare Rechte der \hyperref[itm:04-1]{betroffenen Person} und wirksame
      verwaltungsrechtliche und gerichtliche Rechtsbehelfe für \hyperref[itm:04-1]{betroffene Personen}, deren \hyperref[itm:04-1]{personenbezogene Daten}
      übermittelt werden,
     \label{itm:45-2a}
 
     \item die Existenz und die wirksame Funktionsweise einer oder mehrerer unabhängiger Aufsichtsbehörden in dem
-     betreffenden Drittland oder denen eine internationale Organisation untersteht und die für die Einhaltung und
+     betreffenden Drittland oder denen eine \hyperref[itm:04-29]{internationale Organisation} untersteht und die für die Einhaltung und
      Durchsetzung der Datenschutzvorschriften, einschließlich angemessener Durchsetzungsbefugnisse, für die
      Unterstützung und Beratung der \hyperref[itm:04-1]{betroffenen Personen} bei der Ausübung ihrer Rechte und für die Zusammenarbeit mit
      den Aufsichtsbehörden der Mitgliedstaaten zuständig sind, und
@@ -46,7 +46,7 @@
 
   \item Nach der Beurteilung der Angemessenheit des Schutzniveaus kann die Kommission im Wege eines
    Durchführungsrechtsaktes beschließen, dass ein Drittland, ein Gebiet oder ein oder mehrere spezifische Sektoren in
-   einem Drittland oder eine internationale Organisation ein angemessenes Schutzniveau im Sinne des \hyperref[itm:45-2]
+   einem Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} ein angemessenes Schutzniveau im Sinne des \hyperref[itm:45-2]
    {Absatzes 2 des vorliegenden Artikels} bieten. In dem Durchführungsrechtsakt ist ein Mechanismus für eine
    regelmäßige Überprüfung, die mindestens alle vier Jahre erfolgt, vorzusehen, bei der allen maßgeblichen
    Entwicklungen in dem Drittland oder bei der internationalen Organisation Rechnung getragen wird. Im
@@ -66,7 +66,7 @@
    genannten Beschlüsse im Wege von Durchführungsrechtsakten aus, soweit dies nötig ist und ohne rückwirkende Kraft,
    soweit entsprechende Informationen -- insbesondere im Anschluss an die in \hyperref[itm:45-3]{Absatz 3 des
    vorliegenden Artikels} genannte Überprüfung -- dahingehend vorliegen, dass ein Drittland, ein Gebiet oder ein oder
-   mehrere spezifischer Sektor in einem Drittland oder eine internationale Organisation kein angemessenes Schutzniveau
+   mehrere spezifischer Sektor in einem Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} kein angemessenes Schutzniveau
    im Sinne des \hyperref[itm:45-2]{Absatzes 2 des vorliegenden Artikels} mehr gewährleistet. Diese
    Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen. 
   \label{itm:45-5}
@@ -80,7 +80,7 @@
   \label{itm:45-6}
 
   \item Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an das betreffende Drittland, das Gebiet oder einen oder mehrere
-   spezifische Sektoren in diesem Drittland oder an die betreffende internationale Organisation gemäß den Artikeln
+   spezifische Sektoren in diesem Drittland oder an die betreffende \hyperref[itm:04-29]{internationale Organisation} gemäß den Artikeln
    \hyperref[ch:46]{46} bis \hyperref[ch:49]{49} werden durch einen Beschluss nach \hyperref[itm:45-5]{Absatz 5 des
     vorliegenden Artikels} nicht berührt.
   \label{itm:45-7}
