--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein Verantwortlicher oder ein
-   Auftragsverarbeiter \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine internationale Organisation nur übermitteln,
+   Auftragsverarbeiter \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln,
    sofern der Verantwortliche oder der Auftragsverarbeiter geeignete Garantien vorgesehen hat und sofern den
    \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
   \label{itm:46-1}
