--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -9,7 +9,7 @@
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
    Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich verbindlicher interner Datenschutzvorschriften,
    bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder an
-   eine internationale Organisation nur unter einer der folgenden Bedingungen zulässig:
+   eine \hyperref[itm:04-29]{internationale Organisation} nur unter einer der folgenden Bedingungen zulässig:
   \label{itm:49-1-1}
 
   \begin{enumerate}
@@ -50,7 +50,7 @@
   Falls die Übermittlung nicht auf eine Bestimmung der Artikel \hyperref[ch:45]{45} oder \hyperref[ch:46]
   {46} -- einschließlich der verbindlichen internen Datenschutzvorschriften -- gestützt werden könnte und keine der
   Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf eine Übermittlung an ein
-  Drittland oder eine internationale Organisation nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
+  Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
   nur eine begrenzte Zahl von \hyperref[itm:04-1]{betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
   Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
   überwiegen, und der Verantwortliche alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
@@ -77,7 +77,7 @@
 
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
    wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien von
-   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder internationale Organisationen vorgesehen werden. Die Mitgliedstaaten
+   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} vorgesehen werden. Die Mitgliedstaaten
    teilen der Kommission derartige Bestimmungen mit.
   \label{itm:49-5}
 
