--- a/artikel/50.tex
+++ b/artikel/50.tex
@@ -4,7 +4,7 @@
 
 \addsec{Text der Verordnung}
 
-In Bezug auf Drittländer und internationale Organisationen treffen die Kommission und die Aufsichtsbehörden geeignete
+In Bezug auf Drittländer und \hyperref[itm:04-29]{internationale Organisationen} treffen die Kommission und die Aufsichtsbehörden geeignete
 Maßnahmen zur
 
 \begin{enumerate}[label=\alph*)]
