--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -82,8 +82,8 @@
      Absatz genannten Maßnahmen, je nach den Umständen des Einzelfalls,
     \label{itm:58-2i}
 
-    \item die Aussetzung der Übermittlung von Daten an einen Empfänger in einem Drittland oder an eine internationale
-     Organisation anzuordnen.
+    \item die Aussetzung der Übermittlung von Daten an einen Empfänger in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
+     Organisation} anzuordnen.
     \label{itm:58-2j}
 
   \end{enumerate}
