--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -105,8 +105,8 @@
 
     \item Abgabe einer Stellungnahme für die Kommission zur Beurteilung der Angemessenheit des in einem Drittland oder
      einer internationalen Organisation gebotenen Schutzniveaus einschließlich zur Beurteilung der Frage, ob das
-     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine internationale
-     Organisation kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die Kommission dem Ausschuss
+     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-29]{internationale
+     Organisation} kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die Kommission dem Ausschuss
      alle erforderlichen Unterlagen, darunter den Schriftwechsel mit der Regierung des Drittlands, dem Gebiet oder
      spezifischen Sektor oder der internationalen Organisation;
     \label{itm:70-1s}
