--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -103,8 +103,8 @@
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Person} gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22};
     \label{itm:83-5b}
 
-    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen Empfänger in einem Drittland oder an eine internationale
-     Organisation gemäß den Artikeln \hyperref[ch:44]{44} bis \hyperref[ch:49]{49};
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen Empfänger in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
+     Organisation} gemäß den Artikeln \hyperref[ch:44]{44} bis \hyperref[ch:49]{49};
     \label{itm:83-5c}
 
     \item alle Pflichten gemäß den Rechtsvorschriften der Mitgliedstaaten, die im Rahmen des \hyperref[part:9]
