--- a/artikel/44.tex
+++ b/artikel/44.tex
@@ -5,11 +5,11 @@
 \addsec{Text der Verordnung}
 
 Jedwede Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}, die bereits verarbeitet werden oder nach ihrer Übermittlung an ein
-Drittland oder eine internationale Organisation verarbeitet werden sollen, ist nur zulässig, wenn der Verantwortliche
+Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} verarbeitet werden sollen, ist nur zulässig, wenn der Verantwortliche
 und der Auftragsverarbeiter die in \hyperref[part:5]{diesem Kapitel} niedergelegten Bedingungen einhalten und auch die
 sonstigen Bestimmungen dieser Verordnung eingehalten werden; dies gilt auch für die etwaige Weiterübermittlung
-\hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende internationale Organisation an ein anderes
-Drittland oder eine andere internationale Organisation. Alle Bestimmungen dieses Kapitels sind anzuwenden, um
+\hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende \hyperref[itm:04-29]{internationale Organisation} an ein anderes
+Drittland oder eine andere \hyperref[itm:04-29]{internationale Organisation}. Alle Bestimmungen dieses Kapitels sind anzuwenden, um
 sicherzustellen, dass das durch diese Verordnung gewährleistete Schutzniveau für natürliche Personen nicht untergraben
 wird.
 
