Verlinkung "Dienst der Informationsgesellschaft"

--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -34,7 +34,7 @@
      Unionsrecht oder dem Recht der Mitgliedstaaten erforderlich, dem der Verantwortliche unterliegt.
     \label{itm:17-1e}
 
-    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene Dienste der Informationsgesellschaft gemäß
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene \hyperref[itm:04-28]{Dienste der Informationsgesellschaft} gemäß
      \hyperref[itm:08-1]{Artikel 8 Absatz 1} erhoben.
     \label{itm:17-1f}
 
