--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -29,7 +29,7 @@
    einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.
   \label{itm:21-4}
 
-  \item Im Zusammenhang mit der Nutzung von Diensten der Informationsgesellschaft kann die \hyperref[itm:04-1]{betroffene Person} ungeachtet
+  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-28]{Diensten der Informationsgesellschaft} kann die \hyperref[itm:04-1]{betroffene Person} ungeachtet
    der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels automatisierter Verfahren ausüben, bei denen technische
    Spezifikationen verwendet werden.
   \label{itm:21-5}
