Verlinkung "maßgeblicher und begründeter Einspruch"

--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -23,13 +23,13 @@
   \label{itm:60-3}
 
   \item Legt eine der anderen betroffenen Aufsichtsbehörden innerhalb von vier Wochen, nachdem sie gemäß \hyperref
-   [itm:60-3]{Absatz 3 des vorliegenden Artikels} konsultiert wurde, gegen diesen Beschlussentwurf einen maßgeblichen
-   und begründeten Einspruch ein und schließt sich die federführende Aufsichtsbehörde dem maßgeblichen und begründeten
-   Einspruch nicht an oder ist der Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die
+   [itm:60-3]{Absatz 3 des vorliegenden Artikels} konsultiert wurde, gegen diesen Beschlussentwurf einen \hyperref[itm:04-27]{maßgeblichen
+   und begründeten Einspruch} ein und schließt sich die federführende Aufsichtsbehörde dem \hyperref[itm:04-27]{maßgeblichen und begründeten
+   Einspruch} nicht an oder ist der Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die
    federführende Aufsichtsbehörde das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.
   \label{itm:60-4}
 
-  \item Beabsichtigt die federführende Aufsichtsbehörde, sich dem maßgeblichen und begründeten Einspruch anzuschließen,
+  \item Beabsichtigt die federführende Aufsichtsbehörde, sich dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} anzuschließen,
    so legt sie den anderen betroffenen Aufsichtsbehörden einen überarbeiteten Beschlussentwurf zur Stellungnahme vor.
    Der überarbeitete Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4}
    unterzogen.
