--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -13,9 +13,9 @@
   \begin{enumerate}
   
     \item wenn eine betroffene Aufsichtsbehörde in einem Fall nach \hyperref[itm:60-4]{Artikel 60 Absatz 4} einen
-     maßgeblichen und begründeten Einspruch gegen einen Beschlussentwurf der federführenden Behörde eingelegt hat oder
+     \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der federführenden Behörde eingelegt hat oder
      die federführende Behörde einen solchen Einspruch als nicht maßgeblich oder nicht begründet abgelehnt hat. Der
-     verbindliche Beschluss betrifft alle Angelegenheiten, die Gegenstand des maßgeblichen und begründeten Einspruchs
+     verbindliche Beschluss betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch}s
      sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;
     \label{itm:65-1a}
 
