--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -9,7 +9,7 @@
   \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die Aufsichtsbehörde der Hauptniederlassung oder der einzigen
    Niederlassung des Verantwortlichen oder des Auftragsverarbeiters gemäß dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} die zuständige federführende Aufsichtsbehörde für die von diesem Verantwortlichen oder diesem
-   Auftragsverarbeiter durchgeführte grenzüberschreitende Verarbeitung.
+   Auftragsverarbeiter durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
   \label{itm:56-1}
 
   \item Abweichend von \hyperref[itm:56-1]{Absatz 1} ist jede Aufsichtsbehörde dafür zuständig, sich mit einer bei ihr
@@ -39,7 +39,7 @@
 
   \item Die federführende Aufsichtsbehörde ist der einzige Ansprechpartner der Verantwortlichen oder der
    Auftragsverarbeiter für Fragen der von diesem Verantwortlichen oder diesem Auftragsverarbeiter durchgeführten
-   grenzüberschreitenden Verarbeitung.
+   \hyperref[itm:04-23]{grenzüberschreitenden Verarbeitung}.
   \label{itm:56-6}
 
 \end{enumerate}
