Verlinkung "betroffene Aufsichtsbehörde"

--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -57,7 +57,7 @@
   \item Die Aufsichtsbehörden und die Kommission übermitteln unverzüglich dem Ausschuss auf elektronischem Wege unter
    Verwendung eines standardisierten Formats alle zweckdienlichen Informationen, einschließlich -- je nach Fall --
    einer kurzen Darstellung des Sachverhalts, des Beschlussentwurfs, der Gründe, warum eine solche Maßnahme ergriffen
-   werden muss, und der Standpunkte anderer betroffener Aufsichtsbehörden.
+   werden muss, und der Standpunkte anderer \hyperref[itm:04-22]{betroffener Aufsichtsbehörden}.
   \label{itm:64-4}
 
   \item Der Vorsitz des Ausschusses unterrichtet unverzüglich auf elektronischem Wege
@@ -86,7 +86,7 @@
    gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
   \label{itm:64-7}
 
-  \item Teilt die betroffene Aufsichtsbehörde dem Vorsitz des Ausschusses innerhalb der Frist nach \hyperref[itm:64-7]
+  \item Teilt die \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} dem Vorsitz des Ausschusses innerhalb der Frist nach \hyperref[itm:64-7]
    {Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen Gründe mit, dass sie beabsichtigt, der
    Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so gilt \hyperref[itm:65-2]{Artikel 65
    Absatz 1}.
