--- a/artikel/74.tex
+++ b/artikel/74.tex
@@ -15,7 +15,7 @@
     \label{itm:74-1a}
 
     \item Übermittlung der Beschlüsse des Ausschusses nach \hyperref[ch:65]{Artikel 65} an die federführende
-     Aufsichtsbehörde und die betroffenen Aufsichtsbehörden,
+     Aufsichtsbehörde und die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden},
     \label{itm:74-1b}
 
     \item Sicherstellung einer rechtzeitigen Ausführung der Aufgaben des Ausschusses, insbesondere der Aufgaben im
