--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -6,23 +6,23 @@
 
 \begin{enumerate}
 
-  \item Die federführende Aufsichtsbehörde arbeitet mit den anderen betroffenen Aufsichtsbehörden im Einklang mit diesem
+  \item Die federführende Aufsichtsbehörde arbeitet mit den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} im Einklang mit diesem
    Artikel zusammen und bemüht sich dabei, einen Konsens zu erzielen. Die federführende Aufsichtsbehörde und die
-   betroffenen Aufsichtsbehörden tauschen untereinander alle zweckdienlichen Informationen aus.
+   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander alle zweckdienlichen Informationen aus.
   \label{itm:60-1}
 
-  \item Die federführende Aufsichtsbehörde kann jederzeit andere betroffene Aufsichtsbehörden um Amtshilfe gemäß
+  \item Die federführende Aufsichtsbehörde kann jederzeit andere \hyperref[itm:04-22]{betroffene Aufsichtsbehörden} um Amtshilfe gemäß
   \hyperref[ch:61]{Artikel 61} ersuchen und gemeinsame Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} durchführen,
    insbesondere zur Durchführung von Untersuchungen oder zur Überwachung der Umsetzung einer Maßnahme in Bezug auf
    einen Verantwortlichen oder einen Auftragsverarbeiter, der in einem anderen Mitgliedstaat niedergelassen ist.
   \label{itm:60-2}
 
-  \item Die federführende Aufsichtsbehörde übermittelt den anderen betroffenen Aufsichtsbehörden unverzüglich die
-   zweckdienlichen Informationen zu der Angelegenheit. Sie legt den anderen betroffenen Aufsichtsbehörden unverzüglich
+  \item Die federführende Aufsichtsbehörde übermittelt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich die
+   zweckdienlichen Informationen zu der Angelegenheit. Sie legt den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich
    einen Beschlussentwurf zur Stellungnahme vor und trägt deren Standpunkten gebührend Rechnung.
   \label{itm:60-3}
 
-  \item Legt eine der anderen betroffenen Aufsichtsbehörden innerhalb von vier Wochen, nachdem sie gemäß \hyperref
+  \item Legt eine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} innerhalb von vier Wochen, nachdem sie gemäß \hyperref
    [itm:60-3]{Absatz 3 des vorliegenden Artikels} konsultiert wurde, gegen diesen Beschlussentwurf einen \hyperref[itm:04-27]{maßgeblichen
    und begründeten Einspruch} ein und schließt sich die federführende Aufsichtsbehörde dem \hyperref[itm:04-27]{maßgeblichen und begründeten
    Einspruch} nicht an oder ist der Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die
@@ -30,20 +30,20 @@
   \label{itm:60-4}
 
   \item Beabsichtigt die federführende Aufsichtsbehörde, sich dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} anzuschließen,
-   so legt sie den anderen betroffenen Aufsichtsbehörden einen überarbeiteten Beschlussentwurf zur Stellungnahme vor.
+   so legt sie den anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} einen überarbeiteten Beschlussentwurf zur Stellungnahme vor.
    Der überarbeitete Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4}
    unterzogen.
   \label{itm:60-5}
 
-  \item Legt keine der anderen betroffenen Aufsichtsbehörden Einspruch gegen den Beschlussentwurf ein, der von der
+  \item Legt keine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} Einspruch gegen den Beschlussentwurf ein, der von der
    federführenden Aufsichtsbehörde innerhalb der in den Absätzen \hyperref[itm:60-4]{4} und \hyperref[itm:60-5]
-   {5} festgelegten Frist vorgelegt wurde, so gelten die federführende Aufsichtsbehörde und die betroffenen
-   Aufsichtsbehörden als mit dem Beschlussentwurf einverstanden und sind an ihn gebunden.
+   {5} festgelegten Frist vorgelegt wurde, so gelten die federführende Aufsichtsbehörde und die \hyperref[itm:04-22]{betroffenen
+   Aufsichtsbehörden} als mit dem Beschlussentwurf einverstanden und sind an ihn gebunden.
   \label{itm:60-6}
 
   \item Die federführende Aufsichtsbehörde erlässt den Beschluss und teilt ihn der Hauptniederlassung oder der einzigen
    Niederlassung des Verantwortlichen oder gegebenenfalls des Auftragsverarbeiters mit und setzt die anderen
-   betroffenen Aufsichtsbehörden und den Ausschuss von dem betreffenden Beschluss einschließlich einer Zusammenfassung
+   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} und den Ausschuss von dem betreffenden Beschluss einschließlich einer Zusammenfassung
    der maßgeblichen Fakten und Gründe in Kenntnis. Die Aufsichtsbehörde, bei der eine Beschwerde eingereicht worden
    ist, unterrichtet den Beschwerdeführer über den Beschluss.
   \label{itm:60-7}
@@ -69,15 +69,15 @@
    erforderlichen Maßnahmen, um die Verarbeitungstätigkeiten all seiner Niederlassungen in der Union mit dem Beschluss
    in Einklang zu bringen. Der Verantwortliche oder der Auftragsverarbeiter teilt der federführenden Aufsichtsbehörde
    die Maßnahmen mit, die zur Einhaltung des Beschlusses ergriffen wurden; diese wiederum unterrichtet die anderen
-   betroffenen Aufsichtsbehörden.
+   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}.
   \label{itm:60-10}
 
-  \item Hat -- in Ausnahmefällen -- eine betroffene Aufsichtsbehörde Grund zu der Annahme, dass zum Schutz der
+  \item Hat -- in Ausnahmefällen -- eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} Grund zu der Annahme, dass zum Schutz der
    Interessen \hyperref[itm:04-1]{betroffener Personen} dringender Handlungsbedarf besteht, so kommt das Dringlichkeitsverfahren nach
    \hyperref[ch:66]{Artikel 66} zur Anwendung.
   \label{itm:60-11}
 
-  \item Die federführende Aufsichtsbehörde und die anderen betroffenen Aufsichtsbehörden übermitteln einander die nach
+  \item Die federführende Aufsichtsbehörde und die anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} übermitteln einander die nach
    diesem Artikel geforderten Informationen auf elektronischem Wege unter Verwendung eines standardisierten Formats.
   \label{itm:60-12}
 
