--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -12,20 +12,20 @@
 
   \begin{enumerate}
   
-    \item wenn eine betroffene Aufsichtsbehörde in einem Fall nach \hyperref[itm:60-4]{Artikel 60 Absatz 4} einen
+    \item wenn eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} in einem Fall nach \hyperref[itm:60-4]{Artikel 60 Absatz 4} einen
      \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der federführenden Behörde eingelegt hat oder
      die federführende Behörde einen solchen Einspruch als nicht maßgeblich oder nicht begründet abgelehnt hat. Der
      verbindliche Beschluss betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch}s
      sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;
     \label{itm:65-1a}
 
-    \item wenn es widersprüchliche Standpunkte dazu gibt, welche der betroffenen Aufsichtsbehörden für die
+    \item wenn es widersprüchliche Standpunkte dazu gibt, welche der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} für die
      Hauptniederlassung zuständig ist,
     \label{itm:65-1b}
 
     \item wenn eine zuständige Aufsichtsbehörde in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1} genannten Fällen
      keine Stellungnahme des Ausschusses einholt oder der Stellungnahme des Ausschusses gemäß \hyperref[ch:64]
-     {Artikel 64} nicht folgt. In diesem Fall kann jede betroffene Aufsichtsbehörde oder die Kommission die
+     {Artikel 64} nicht folgt. In diesem Fall kann jede \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} oder die Kommission die
      Angelegenheit dem Ausschuss vorlegen.
     \label{itm:65-1c}
 
@@ -34,7 +34,7 @@
   \item Der in \hyperref[itm:65-1]{Absatz 1} genannte Beschluss wird innerhalb eines Monats nach der Befassung mit der
    Angelegenheit mit einer Mehrheit von zwei Dritteln der Mitglieder des Ausschusses angenommen. Diese Frist kann wegen
    der Komplexität der Angelegenheit um einen weiteren Monat verlängert werden. Der in \hyperref[itm:65-1]{Absatz 1}
-   genannte Beschluss wird begründet und an die federführende Aufsichtsbehörde und alle betroffenen Aufsichtsbehörden
+   genannte Beschluss wird begründet und an die federführende Aufsichtsbehörde und alle \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}
    übermittelt und ist für diese verbindlich.
   \label{itm:65-2}
 
@@ -44,11 +44,11 @@
    zwischen den Mitgliedern des Ausschusses gibt die Stimme des Vorsitzes den Ausschlag.
   \label{itm:65-3}
 
-  \item Die betroffenen Aufsichtsbehörden nehmen vor Ablauf der in den Absätzen \hyperref[itm:65-2]{2} und \hyperref
+  \item Die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} nehmen vor Ablauf der in den Absätzen \hyperref[itm:65-2]{2} und \hyperref
    [itm:65-3]{3} genannten Fristen keinen Beschluss über die dem Ausschuss vorgelegte Angelegenheit an.
   \label{itm:65-4}
 
-  \item Der Vorsitz des Ausschusses unterrichtet die betroffenen Aufsichtsbehörden unverzüglich über den in \hyperref
+  \item Der Vorsitz des Ausschusses unterrichtet die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich über den in \hyperref
    [itm:65-1]{Absatz 1} genannten Beschluss. Er setzt die Kommission hiervon in Kenntnis. Der Beschluss wird
    unverzüglich auf der Website des Ausschusses veröffentlicht, nachdem die Aufsichtsbehörde den in \hyperref[itm:65-6]
    {Absatz 6} genannten endgültigen Beschluss mitgeteilt hat.
@@ -60,7 +60,7 @@
    seinen Beschluss mitgeteilt hat. Die federführende Aufsichtsbehörde oder gegebenenfalls die Aufsichtsbehörde, bei
    der die Beschwerde eingereicht wurde, setzt den Ausschuss von dem Zeitpunkt, zu dem ihr endgültiger Beschluss dem
    Verantwortlichen oder dem Auftragsverarbeiter bzw. der \hyperref[itm:04-1]{betroffenen Person} mitgeteilt wird, in Kenntnis. Der
-   endgültige Beschluss der betroffenen Aufsichtsbehörden wird gemäß \hyperref[ch:60]{Artikel 60} Absätze \hyperref
+   endgültige Beschluss der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} wird gemäß \hyperref[ch:60]{Artikel 60} Absätze \hyperref
    [itm:60-7]{7}, \hyperref[itm:60-8]{8} und \hyperref[itm:60-9]{9} angenommen. Im endgültigen Beschluss wird auf den
    in \hyperref[itm:65-1]{Absatz 1} genannten Beschluss verwiesen und festgelegt, dass der in \hyperref[itm:65-1]
    {Absatz 1 des vorliegenden Artikels} genannte Beschluss gemäß \hyperref[itm:65-5]{Absatz 5} auf der Website des
