--- a/artikel/66.tex
+++ b/artikel/66.tex
@@ -6,12 +6,12 @@
 
 \begin{enumerate}
 
-  \item Unter außergewöhnlichen Umständen kann eine betroffene Aufsichtsbehörde abweichend vom Kohärenzverfahren nach
+  \item Unter außergewöhnlichen Umständen kann eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} abweichend vom Kohärenzverfahren nach
    Artikel \hyperref[ch:63]{63}, \hyperref[ch:64]{64} und \hyperref[ch:65]{65} oder dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} sofort einstweilige Maßnahmen mit festgelegter Geltungsdauer von höchstens drei Monaten treffen, die in
    ihrem Hoheitsgebiet rechtliche Wirkung entfalten sollen, wenn sie zu der Auffassung gelangt, dass dringender
    Handlungsbedarf besteht, um Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen. Die Aufsichtsbehörde setzt
-   die anderen betroffenen Aufsichtsbehörden, den Ausschuss und die Kommission unverzüglich von diesen Maßnahmen und
+   die anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}, den Ausschuss und die Kommission unverzüglich von diesen Maßnahmen und
    den Gründen für deren Erlass in Kenntnis.
   \label{itm:66-1}
 
