Verlinkung "verbindliche interne Datenschutzvorschriften"

--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
-   Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich verbindlicher interner Datenschutzvorschriften,
+   Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner Datenschutzvorschriften},
    bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder an
    eine \hyperref[itm:04-29]{internationale Organisation} nur unter einer der folgenden Bedingungen zulässig:
   \label{itm:49-1-1}
@@ -48,7 +48,7 @@
 
   \phantomsection
   Falls die Übermittlung nicht auf eine Bestimmung der Artikel \hyperref[ch:45]{45} oder \hyperref[ch:46]
-  {46} -- einschließlich der verbindlichen internen Datenschutzvorschriften -- gestützt werden könnte und keine der
+  {46} -- einschließlich der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} -- gestützt werden könnte und keine der
   Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf eine Übermittlung an ein
   Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
   nur eine begrenzte Zahl von \hyperref[itm:04-1]{betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
