--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -22,8 +22,8 @@
     \label{itm:70-1b}
 
     \item Beratung der Kommission über das Format und die Verfahren für den Austausch von Informationen zwischen den
-     Verantwortlichen, den Auftragsverarbeitern und den Aufsichtsbehörden in Bezug auf verbindliche interne
-     Datenschutzvorschriften;
+     Verantwortlichen, den Auftragsverarbeitern und den Aufsichtsbehörden in Bezug auf \hyperref[itm:04-20]{verbindliche interne
+     Datenschutzvorschriften};
     \label{itm:70-1c}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren zu Verfahren für die Löschung gemäß
@@ -56,8 +56,8 @@
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der in \hyperref[ch:47]{Artikel 47} aufgeführten Kriterien und
-     Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf verbindlichen internen
-     Datenschutzvorschriften von Verantwortlichen oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
+     Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf \hyperref[itm:04-20]{verbindlichen internen
+     Datenschutzvorschriften} von Verantwortlichen oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
      erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
     \label{itm:70-1i}
 
