--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -21,7 +21,7 @@
     \item einem rechtlich bindenden und durchsetzbaren Dokument zwischen den Behörden oder öffentlichen Stellen,
     \label{itm:46-2a}
 
-    \item verbindlichen internen Datenschutzvorschriften gemäß \hyperref[ch:47]{Artikel 47},
+    \item \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} gemäß \hyperref[ch:47]{Artikel 47},
     \label{itm:46-2b}
 
     \item Standarddatenschutzklauseln, die von der Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
