--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Die zuständige Aufsichtsbehörde genehmigt gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}
-   verbindliche interne Datenschutzvorschriften, sofern diese
+   \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese
   \label{itm:47-1}
 
   \begin{enumerate}
@@ -26,7 +26,7 @@
 
   \end{enumerate}
 
-  \item Die verbindlichen internen Datenschutzvorschriften nach \hyperref[itm:47-1]{Absatz 1} enthalten mindestens
+  \item Die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} nach \hyperref[itm:47-1]{Absatz 1} enthalten mindestens
    folgende Angaben:
   \label{itm:47-2}
 
@@ -56,25 +56,25 @@
      Verarbeitung -- einschließlich Profiling -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
      zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
      Aufsichtsbehörde beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
-     Mitgliedstaaten und im Falle einer Verletzung der verbindlichen internen Datenschutzvorschriften Wiedergutmachung
+     Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} Wiedergutmachung
      und gegebenenfalls Schadenersatz zu erhalten;
     \label{itm:47-2e}
 
     \item die von dem in einem Mitgliedstaat niedergelassenen Verantwortlichen oder Auftragsverarbeiter übernommene
      Haftung für etwaige Verstöße eines nicht in der Union niedergelassenen betreffenden Mitglieds der
-     Unternehmensgruppe gegen die verbindlichen internen Datenschutzvorschriften; der Verantwortliche oder der
+     Unternehmensgruppe gegen die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}; der Verantwortliche oder der
      Auftragsverarbeiter ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn er nachweist, dass
      der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last gelegt werden kann;
     \label{itm:47-2f}
 
     \item die Art und Weise, wie die \hyperref[itm:04-1]{betroffenen Personen} über die Bestimmungen der Artikel \hyperref[ch:13]{13} und
-     \hyperref[ch:14]{14} hinaus über die verbindlichen internen Datenschutzvorschriften und insbesondere über die unter
+     \hyperref[ch:14]{14} hinaus über die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} und insbesondere über die unter
      den Buchstaben \hyperref[itm:47-2d]{d}, \hyperref[itm:47-2e]{e} und \hyperref[itm:47-2f]{f} dieses Absatzes
      genannten Aspekte informiert werden;
     \label{itm:47-2g}
 
     \item die Aufgaben jedes gemäß \hyperref[ch:37]{Artikel 37} benannten Datenschutzbeauftragten oder jeder anderen
-     Person oder Einrichtung, die mit der Überwachung der Einhaltung der verbindlichen internen Datenschutzvorschriften
+     Person oder Einrichtung, die mit der Überwachung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}
      in der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit
      der Überwachung der Schulungsmaßnahmen und dem Umgang mit Beschwerden befasst ist;
     \label{itm:47-2h}
@@ -83,7 +83,7 @@
     \label{itm:47-2i}
 
     \item die innerhalb der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
-     ausüben, bestehenden Verfahren zur Überprüfung der Einhaltung der verbindlichen internen Datenschutzvorschriften.
+     ausüben, bestehenden Verfahren zur Überprüfung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}.
      Derartige Verfahren beinhalten Datenschutzüberprüfungen und Verfahren zur Gewährleistung von Abhilfemaßnahmen zum
      Schutz der Rechte der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
@@ -104,7 +104,7 @@
     \item die Meldeverfahren zur Unterrichtung der zuständigen Aufsichtsbehörde über jegliche für ein Mitglied der
      Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem
      Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die Garantien auswirken könnten, die die
-     verbindlichen internen Datenschutzvorschriften bieten, und
+     \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und
     \label{itm:47-2m}
 
     \item geeignete Datenschutzschulungen für Personal mit ständigem oder regelmäßigem Zugang zu personenbezogenen
@@ -113,8 +113,8 @@
 
   \end{enumerate}
 
-  \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über verbindliche interne
-   Datenschutzvorschriften im Sinne des vorliegenden Artikels zwischen Verantwortlichen, Auftragsverarbeitern und
+  \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über \hyperref[itm:04-20]{verbindliche interne
+   Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen Verantwortlichen, Auftragsverarbeitern und
    Aufsichtsbehörden festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
    {Artikel 93 Absatz 2} erlassen.
   \label{itm:47-3}
