--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -8,7 +8,7 @@
 
   \item Die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und ethnische Herkunft, politische Meinungen,
    religiöse oder weltanschauliche Überzeugungen oder die Gewerkschaftszugehörigkeit hervorgehen, sowie die
-   Verarbeitung von genetischen Daten, biometrischen Daten zur eindeutigen Identifizierung einer natürlichen Person,
+   Verarbeitung von genetischen Daten, \hyperref[itm:04-14]{biometrischen Daten} zur eindeutigen Identifizierung einer natürlichen Person,
    Gesundheitsdaten oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen Person ist untersagt.
   \label{itm:09-1}
 
@@ -90,7 +90,8 @@
   \label{itm:09-3}
 
   \item Die Mitgliedstaaten können zusätzliche Bedingungen, einschließlich Beschränkungen, einführen oder
-   aufrechterhalten, soweit die Verarbeitung von genetischen, biometrischen oder Gesundheitsdaten betroffen ist.
+   aufrechterhalten, soweit die Verarbeitung von genetischen, \hyperref[itm:04-14]{biometrischen} oder Gesundheitsdaten
+   betroffen ist.
   \label{itm:09-4}
 
 \end{enumerate}
