Verlinkung "Verletzung des Schutzes personenbezogener Daten"

--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -77,7 +77,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} einverstanden ist;
   \label{itm:04-11}
 
-  \item „Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}“ eine Verletzung der Sicherheit, die, ob unbeabsichtigt oder
+  \item „Verletzung des Schutzes personenbezogener Daten“ eine Verletzung der Sicherheit, die, ob unbeabsichtigt oder
    unrechtmäßig, zur Vernichtung, zum Verlust, zur Veränderung, oder zur unbefugten Offenlegung von beziehungsweise zum
    unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} führt, die übermittelt, gespeichert oder auf sonstige Weise verarbeitet
    wurden;
@@ -203,7 +203,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
 \begin{itemize}
 
-  \item zur Ziffer 12 -- klären: Liegt eine Verletzung des Schutzes nur dann vor, wenn ein tatsächlicher Vorfall
+  \item zur Ziffer 12 -- klären: Liegt eine \hyperref[itm:04-12]{Verletzung des Schutzes} nur dann vor, wenn ein tatsächlicher Vorfall
   eingetroffen ist?
 
   \item zur Ziffer 14 -- klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
