--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -6,13 +6,13 @@
 
 \begin{enumerate}
 
-  \item Hat die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
+  \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
    Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der Verantwortliche die \hyperref[itm:04-1]{betroffene Person}
    unverzüglich von der Verletzung.
   \label{itm:34-1}
 
   \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} beschreibt in klarer und
-   einfacher Sprache die Art der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und enthält zumindest die in
+   einfacher Sprache die Art der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und enthält zumindest die in
    \hyperref[itm:33-3]{Artikel 33 Absatz 3} Buchstaben \hyperref[itm:33-3b]{b}, \hyperref[itm:33-3c]{c} und \hyperref
     [itm:33-3d]{d} genannten Informationen und Maßnahmen.
   \label{itm:34-2}
@@ -41,9 +41,9 @@
 
   \end{enumerate}
 
-  \item Wenn der Verantwortliche die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die Verletzung des Schutzes personenbezogener
-   Daten benachrichtigt hat, kann die Aufsichtsbehörde unter Berücksichtigung der Wahrscheinlichkeit, mit der die
-   Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
+  \item Wenn der Verantwortliche die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener
+   Daten} benachrichtigt hat, kann die Aufsichtsbehörde unter Berücksichtigung der Wahrscheinlichkeit, mit der die
+   \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
    dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
    genannten Voraussetzungen erfüllt sind.
   \label{itm:34-4}
