--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -45,8 +45,8 @@
      für die Sicherheit der Verarbeitung gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
-    \item die Meldung von Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} an Aufsichtsbehörden und die
-     Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
+    \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an Aufsichtsbehörden und die
+     Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten};
     \label{itm:40-2i}
 
     \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-29]{internationale Organisationen} oder
