--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -58,7 +58,7 @@
      bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit dieser Verordnung zu bringen,
     \label{itm:58-2d}
 
-    \item den Verantwortlichen anzuweisen, die von einer Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
+    \item den Verantwortlichen anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
      Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
