--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -42,14 +42,14 @@
     \label{itm:70-1f}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} für die Feststellung von Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und die
+     vorliegenden Absatzes} für die Feststellung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} und die
      Festlegung der Unverzüglichkeit im Sinne des \hyperref[ch:33]{Artikels 33} Absätze \hyperref[itm:33-1]{1} und
      \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der Verantwortliche oder der
-     Auftragsverarbeiter die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} zu melden hat;
+     Auftragsverarbeiter die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu melden hat;
     \label{itm:70-1g}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} zu den Umständen, unter denen eine Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}
+     vorliegenden Absatzes} zu den Umständen, unter denen eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}
      voraussichtlich ein hohes Risiko für die Rechte und Freiheiten natürlicher Personen im Sinne des \hyperref
      [itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;
     \label{itm:70-1h}
