--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -6,14 +6,14 @@
 
 \begin{enumerate}
 
-  \item Im Falle einer Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} meldet der Verantwortliche unverzüglich und
+  \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der Verantwortliche unverzüglich und
    möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde, diese der gemäß Artikel 51 zuständigen
-   Aufsichtsbehörde, es sei denn, dass die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} voraussichtlich nicht zu
+   Aufsichtsbehörde, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich nicht zu
    einem Risiko für die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung an die Aufsichtsbehörde
    nicht binnen 72 Stunden, so ist ihr eine Begründung für die Verzögerung beizufügen.
   \label{itm:33-1}
 
-  \item Wenn dem Auftragsverarbeiter eine Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} bekannt wird, meldet er diese
+  \item Wenn dem Auftragsverarbeiter eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} bekannt wird, meldet er diese
    dem Verantwortlichen unverzüglich.
   \label{itm:33-2}
 
@@ -22,7 +22,7 @@
 
   \begin{enumerate}
   
-    \item eine Beschreibung der Art der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}, soweit möglich mit Angabe der
+    \item eine Beschreibung der Art der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}, soweit möglich mit Angabe der
      Kategorien und der ungefähren Zahl der \hyperref[itm:04-1]{betroffenen Personen}, der betroffenen Kategorien und der ungefähren Zahl
      der betroffenen \hyperref[itm:04-1]{personenbezogenen Daten}sätze;
     \label{itm:33-3a}
@@ -31,11 +31,11 @@
      Informationen;
     \label{itm:33-3b}
 
-    \item eine Beschreibung der wahrscheinlichen Folgen der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
+    \item eine Beschreibung der wahrscheinlichen Folgen der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten};
     \label{itm:33-3c}
 
     \item eine Beschreibung der von dem Verantwortlichen ergriffenen oder vorgeschlagenen Maßnahmen zur Behebung der
-     Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und gegebenenfalls Maßnahmen zur Abmilderung ihrer möglichen
+     \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und gegebenenfalls Maßnahmen zur Abmilderung ihrer möglichen
      nachteiligen Auswirkungen.
     \label{itm:33-3d}
 
@@ -45,8 +45,8 @@
    diese Informationen ohne unangemessene weitere Verzögerung schrittweise zur Verfügung stellen.
   \label{itm:33-4}
 
-  \item Der Verantwortliche dokumentiert Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} einschließlich aller im
-   Zusammenhang mit der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und
+  \item Der Verantwortliche dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} einschließlich aller im
+   Zusammenhang mit der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und
    der ergriffenen Abhilfemaßnahmen. Diese Dokumentation muss der Aufsichtsbehörde die Überprüfung der Einhaltung der
    Bestimmungen dieses Artikels ermöglichen.
   \label{itm:33-5}
